--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -3,17 +3,37 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
-CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,SPI1\:I,DFSDM1\:I
-CortexM7.Pins=PD14,PD15,PG9,PE1
+CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,DFSDM1\:I,SPI2\:I
+CortexM7.Pins=PE3,PC13,PF7,PF8,PF9,PB0,PE8,PB14,PD12,PD13,PE1
 DFSDM1.Divider=110
 DFSDM1.DmaMode_reg_FIL0=ENABLE
+DFSDM1.DmaMode_reg_FIL1=ENABLE
+DFSDM1.DmaMode_reg_FIL2=ENABLE
+DFSDM1.DmaMode_reg_FIL3=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
+DFSDM1.FastMode_reg_FIL1=ENABLE
+DFSDM1.FastMode_reg_FIL2=ENABLE
+DFSDM1.FastMode_reg_FIL3=ENABLE
 DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
+DFSDM1.Filter_regChannel_FIL1=DFSDM_CHANNEL_3
+DFSDM1.Filter_regChannel_FIL2=DFSDM_CHANNEL_4
+DFSDM1.Filter_regChannel_FIL3=DFSDM_CHANNEL_5
+DFSDM1.Filter_regContinuousMode_FIL0=DFSDM_CONTINUOUS_CONV_ON
 DFSDM1.Fosr_FIL0=125
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2
+DFSDM1.Fosr_FIL1=125
+DFSDM1.Fosr_FIL2=125
+DFSDM1.Fosr_FIL3=125
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3
 DFSDM1.Selection=DFSDM_CHANNEL_OUTPUT_CLOCK_AUDIO
 DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
-DFSDM1.Type_spi_CH2=DFSDM_CHANNEL_SPI_RISING
+DFSDM1.SincOrder_FIL1=DFSDM_FILTER_SINC3_ORDER
+DFSDM1.SincOrder_FIL2=DFSDM_FILTER_SINC3_ORDER
+DFSDM1.SincOrder_FIL3=DFSDM_FILTER_SINC3_ORDER
+DFSDM1.Trigger_reg_FIL1=DFSDM_FILTER_SYNC_TRIGGER
+DFSDM1.Trigger_reg_FIL2=DFSDM_FILTER_SYNC_TRIGGER
+DFSDM1.Trigger_reg_FIL3=DFSDM_FILTER_SYNC_TRIGGER
+DFSDM1.Type_spi_CH2=DFSDM_CHANNEL_SPI_FALLING
+DFSDM1.Type_spi_CH5=DFSDM_CHANNEL_SPI_FALLING
 Dma.DFSDM1_FLT0.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.DFSDM1_FLT0.0.EventEnable=DISABLE
 Dma.DFSDM1_FLT0.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -32,8 +52,65 @@ Dma.DFSDM1_FLT0.0.SyncEnable=DISABLE
 Dma.DFSDM1_FLT0.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.DFSDM1_FLT0.0.SyncRequestNumber=1
 Dma.DFSDM1_FLT0.0.SyncSignalID=NONE
+Dma.DFSDM1_FLT1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DFSDM1_FLT1.1.EventEnable=DISABLE
+Dma.DFSDM1_FLT1.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DFSDM1_FLT1.1.Instance=DMA1_Stream1
+Dma.DFSDM1_FLT1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT1.1.MemInc=DMA_MINC_ENABLE
+Dma.DFSDM1_FLT1.1.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.DFSDM1_FLT1.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DFSDM1_FLT1.1.Priority=DMA_PRIORITY_LOW
+Dma.DFSDM1_FLT1.1.RequestNumber=1
+Dma.DFSDM1_FLT1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DFSDM1_FLT1.1.SignalID=NONE
+Dma.DFSDM1_FLT1.1.SyncEnable=DISABLE
+Dma.DFSDM1_FLT1.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DFSDM1_FLT1.1.SyncRequestNumber=1
+Dma.DFSDM1_FLT1.1.SyncSignalID=NONE
+Dma.DFSDM1_FLT2.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DFSDM1_FLT2.2.EventEnable=DISABLE
+Dma.DFSDM1_FLT2.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DFSDM1_FLT2.2.Instance=DMA1_Stream2
+Dma.DFSDM1_FLT2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT2.2.MemInc=DMA_MINC_ENABLE
+Dma.DFSDM1_FLT2.2.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT2.2.PeriphInc=DMA_PINC_DISABLE
+Dma.DFSDM1_FLT2.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DFSDM1_FLT2.2.Priority=DMA_PRIORITY_LOW
+Dma.DFSDM1_FLT2.2.RequestNumber=1
+Dma.DFSDM1_FLT2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DFSDM1_FLT2.2.SignalID=NONE
+Dma.DFSDM1_FLT2.2.SyncEnable=DISABLE
+Dma.DFSDM1_FLT2.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DFSDM1_FLT2.2.SyncRequestNumber=1
+Dma.DFSDM1_FLT2.2.SyncSignalID=NONE
+Dma.DFSDM1_FLT3.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DFSDM1_FLT3.3.EventEnable=DISABLE
+Dma.DFSDM1_FLT3.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DFSDM1_FLT3.3.Instance=DMA1_Stream3
+Dma.DFSDM1_FLT3.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT3.3.MemInc=DMA_MINC_ENABLE
+Dma.DFSDM1_FLT3.3.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT3.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DFSDM1_FLT3.3.PeriphInc=DMA_PINC_DISABLE
+Dma.DFSDM1_FLT3.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DFSDM1_FLT3.3.Priority=DMA_PRIORITY_LOW
+Dma.DFSDM1_FLT3.3.RequestNumber=1
+Dma.DFSDM1_FLT3.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DFSDM1_FLT3.3.SignalID=NONE
+Dma.DFSDM1_FLT3.3.SyncEnable=DISABLE
+Dma.DFSDM1_FLT3.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DFSDM1_FLT3.3.SyncRequestNumber=1
+Dma.DFSDM1_FLT3.3.SyncSignalID=NONE
 Dma.Request0=DFSDM1_FLT0
-Dma.RequestsNb=1
+Dma.Request1=DFSDM1_FLT1
+Dma.Request2=DFSDM1_FLT2
+Dma.Request3=DFSDM1_FLT3
+Dma.RequestsNb=4
 FREERTOS_M7.FootprintOK=true
 FREERTOS_M7.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK
 FREERTOS_M7.Tasks01=defaultTask,0,1024,StartDefaultTask,As weak,NULL,Dynamic,NULL,NULL
@@ -56,33 +133,40 @@ Mcu.IP4=FREERTOS_M7
 Mcu.IP5=NVIC1
 Mcu.IP6=NVIC2
 Mcu.IP7=RCC
-Mcu.IP8=SPI1
+Mcu.IP8=SPI2
 Mcu.IP9=SYS
 Mcu.IPNb=12
 Mcu.Name=STM32H745ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PD14
-Mcu.Pin14=PD15
-Mcu.Pin15=PG9
-Mcu.Pin16=PB5
-Mcu.Pin17=PE1
-Mcu.Pin18=VP_FREERTOS_M7_VS_CMSIS_V1
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=VP_SYS_M4_VS_Systick
-Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin5=PC2_C
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PB0
-Mcu.Pin9=PE7
-Mcu.PinsNb=21
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PC0
+Mcu.Pin11=PC2_C
+Mcu.Pin12=PC3_C
+Mcu.Pin13=PB0
+Mcu.Pin14=PE7
+Mcu.Pin15=PE8
+Mcu.Pin16=PE9
+Mcu.Pin17=PE12
+Mcu.Pin18=PB10
+Mcu.Pin19=PB14
+Mcu.Pin2=PC13
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PD12
+Mcu.Pin23=PD13
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_FREERTOS_M7_VS_CMSIS_V1
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_SYS_M4_VS_Systick
+Mcu.Pin3=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin4=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin5=PF7
+Mcu.Pin6=PF8
+Mcu.Pin7=PF9
+Mcu.Pin8=PH0-OSC_IN (PH0)
+Mcu.Pin9=PH1-OSC_OUT (PH1)
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745ZITx
@@ -90,8 +174,11 @@ MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC1.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC1.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC1.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC1.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC1.EXTI15_10_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -115,33 +202,30 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA5.GPIOParameters=PinAttribute
-PA5.Mode=Full_Duplex_Master
-PA5.PinAttribute=CortexM7
-PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=PinAttribute
-PA6.Mode=Full_Duplex_Master
-PA6.PinAttribute=CortexM7
-PA6.Signal=SPI1_MISO
+PB0.ContextOwner=CortexM7
 PB0.GPIOParameters=GPIO_Label,PinAttribute
 PB0.GPIO_Label=LED1
 PB0.Locked=true
-PB0.PinAttribute=Free
+PB0.PinAttribute=CortexM7
 PB0.Signal=GPIO_Output
+PB10.GPIOParameters=PinAttribute
+PB10.Mode=Full_Duplex_Master
+PB10.PinAttribute=CortexM7
+PB10.Signal=SPI2_SCK
+PB14.ContextOwner=CortexM7
 PB14.GPIOParameters=GPIO_Label,PinAttribute
 PB14.GPIO_Label=LED3
 PB14.Locked=true
-PB14.PinAttribute=Free
+PB14.PinAttribute=CortexM7
 PB14.Signal=GPIO_Output
-PB5.GPIOParameters=PinAttribute
-PB5.Locked=true
-PB5.Mode=Full_Duplex_Master
-PB5.PinAttribute=CortexM7
-PB5.Signal=SPI1_MOSI
+PC0.GPIOParameters=PinAttribute
+PC0.PinAttribute=CortexM7
+PC0.Signal=S_DATAIN4DFSDM1
+PC13.ContextOwner=CortexM7
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
-PC13.PinAttribute=Free
+PC13.PinAttribute=CortexM7
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN\ (OSC32_IN).GPIOParameters=PinAttribute
 PC14-OSC32_IN\ (OSC32_IN).Locked=true
@@ -154,20 +238,27 @@ PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).PinAttribute=CortexM7
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
 PC2_C.GPIOParameters=PinAttribute
+PC2_C.Mode=Full_Duplex_Master
 PC2_C.PinAttribute=CortexM7
-PC2_C.Signal=S_CKOUTDFSDM1
-PD14.ContextOwner=CortexM7
-PD14.GPIOParameters=GPIO_Label,PinAttribute
-PD14.GPIO_Label=SPI1_CS
-PD14.Locked=true
-PD14.PinAttribute=CortexM7
-PD14.Signal=GPIO_Output
-PD15.ContextOwner=CortexM7
-PD15.GPIOParameters=GPIO_Label,PinAttribute
-PD15.GPIO_Label=RST
-PD15.Locked=true
-PD15.PinAttribute=CortexM7
-PD15.Signal=GPIO_Output
+PC2_C.Signal=SPI2_MISO
+PC3_C.GPIOParameters=PinAttribute
+PC3_C.Locked=true
+PC3_C.Mode=Full_Duplex_Master
+PC3_C.PinAttribute=CortexM7
+PC3_C.Signal=SPI2_MOSI
+PD12.ContextOwner=CortexM7
+PD12.GPIOParameters=GPIO_Label,PinAttribute
+PD12.GPIO_Label=RST
+PD12.Locked=true
+PD12.PinAttribute=CortexM7
+PD12.Signal=GPIO_Output
+PD13.ContextOwner=CortexM7
+PD13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
+PD13.GPIO_Label=INT
+PD13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PD13.Locked=true
+PD13.PinAttribute=CortexM7
+PD13.Signal=GPXTI13
 PD8.GPIOParameters=GPIO_Label,PinAttribute
 PD8.GPIO_Label=STLINK_RX
 PD8.Locked=true
@@ -186,17 +277,49 @@ PE1.GPIO_Label=LED
 PE1.Locked=true
 PE1.PinAttribute=CortexM7
 PE1.Signal=GPIO_Output
+PE12.GPIOParameters=PinAttribute
+PE12.PinAttribute=CortexM7
+PE12.Signal=S_DATAIN5DFSDM1
+PE3.ContextOwner=CortexM7
+PE3.GPIOParameters=GPIO_Label,PinAttribute
+PE3.GPIO_Label=CH3
+PE3.Locked=true
+PE3.PinAttribute=CortexM7
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=PinAttribute
+PE4.PinAttribute=CortexM7
+PE4.Signal=S_DATAIN3DFSDM1
 PE7.GPIOParameters=PinAttribute
 PE7.Locked=true
 PE7.PinAttribute=CortexM7
 PE7.Signal=S_DATAIN2DFSDM1
-PG9.ContextOwner=CortexM7
-PG9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
-PG9.GPIO_Label=INT
-PG9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PG9.Locked=true
-PG9.PinAttribute=CortexM7
-PG9.Signal=GPXTI9
+PE8.ContextOwner=CortexM7
+PE8.GPIOParameters=GPIO_Label,PinAttribute
+PE8.GPIO_Label=SPI_CS
+PE8.Locked=true
+PE8.PinAttribute=CortexM7
+PE8.Signal=GPIO_Output
+PE9.GPIOParameters=PinAttribute
+PE9.PinAttribute=CortexM7
+PE9.Signal=S_CKOUTDFSDM1
+PF7.ContextOwner=CortexM7
+PF7.GPIOParameters=GPIO_Label,PinAttribute
+PF7.GPIO_Label=CH1
+PF7.Locked=true
+PF7.PinAttribute=CortexM7
+PF7.Signal=GPIO_Output
+PF8.ContextOwner=CortexM7
+PF8.GPIOParameters=GPIO_Label,PinAttribute
+PF8.GPIO_Label=CH2
+PF8.Locked=true
+PF8.PinAttribute=CortexM7
+PF8.Signal=GPIO_Output
+PF9.ContextOwner=CortexM7
+PF9.GPIOParameters=GPIO_Label,PinAttribute
+PF9.GPIO_Label=CH0
+PF9.Locked=true
+PF9.PinAttribute=CortexM7
+PF9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
@@ -237,7 +360,7 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,7-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,7-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=110000000
 RCC.AHB12Freq_Value=120000000
 RCC.AHB4Freq_Value=120000000
@@ -327,20 +450,29 @@ RCC.VCO3OutputFreq_Value=150000000
 RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=8000000
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
-SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
-SH.S_CKOUTDFSDM1.ConfNb=2
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,CKOUT
+SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
+SH.S_CKOUTDFSDM1.2=DFSDM1_CKOUT,PDM_SPI_input_from_ch3_and_internal_clock
+SH.S_CKOUTDFSDM1.3=DFSDM1_CKOUT,PDM_SPI_input_from_ch4_and_internal_clock
+SH.S_CKOUTDFSDM1.4=DFSDM1_CKOUT,PDM_SPI_input_from_ch5_and_internal_clock
+SH.S_CKOUTDFSDM1.ConfNb=5
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=27.5 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SH.S_DATAIN3DFSDM1.0=DFSDM1_DATIN3,PDM_SPI_input_from_ch3_and_internal_clock
+SH.S_DATAIN3DFSDM1.ConfNb=1
+SH.S_DATAIN4DFSDM1.0=DFSDM1_DATIN4,PDM_SPI_input_from_ch4_and_internal_clock
+SH.S_DATAIN4DFSDM1.ConfNb=1
+SH.S_DATAIN5DFSDM1.0=DFSDM1_DATIN5,PDM_SPI_input_from_ch5_and_internal_clock
+SH.S_DATAIN5DFSDM1.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=27.5 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_M7_VS_CMSIS_V1.Mode=CMSIS_V1
