--- a/webSocket.ioc
+++ b/webSocket.ioc
@@ -5,7 +5,7 @@ CAD.provider=
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,DFSDM1\:I,SPI2\:I,SPI1\:I
 CortexM7.Pins=PE3,PC13,PF7,PF8,PF9,PB0,PE8,PB14,PD12,PD13,PE1
-DFSDM1.Divider=110
+DFSDM1.Divider=150
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.DmaMode_reg_FIL1=ENABLE
 DFSDM1.DmaMode_reg_FIL2=ENABLE
@@ -24,7 +24,11 @@ DFSDM1.Fosr_FIL0=125
 DFSDM1.Fosr_FIL1=125
 DFSDM1.Fosr_FIL2=125
 DFSDM1.Fosr_FIL3=125
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3,FilterOrder_CH5
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,SincOrder_FIL0,Divider,Selection,Type_spi_CH2,Filter_regContinuousMode_FIL0,Filter_regChannel_FIL1,Trigger_reg_FIL1,Filter_regChannel_FIL2,Trigger_reg_FIL2,Filter_regChannel_FIL3,Trigger_reg_FIL3,Type_spi_CH5,FastMode_reg_FIL1,DmaMode_reg_FIL1,FastMode_reg_FIL2,DmaMode_reg_FIL2,FastMode_reg_FIL3,DmaMode_reg_FIL3,SincOrder_FIL1,Fosr_FIL1,SincOrder_FIL2,Fosr_FIL2,SincOrder_FIL3,Fosr_FIL3,FilterOrder_CH5,RightBitShift_CH2,RightBitShift_CH3,RightBitShift_CH4,RightBitShift_CH5
+DFSDM1.RightBitShift_CH2=0x02
+DFSDM1.RightBitShift_CH3=0x02
+DFSDM1.RightBitShift_CH4=0x02
+DFSDM1.RightBitShift_CH5=0x02
 DFSDM1.Selection=DFSDM_CHANNEL_OUTPUT_CLOCK_AUDIO
 DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
 DFSDM1.SincOrder_FIL1=DFSDM_FILTER_SINC3_ORDER
@@ -85,8 +89,8 @@ Dma.DFSDM1_FLT2.2.Priority=DMA_PRIORITY_LOW
 Dma.DFSDM1_FLT2.2.RequestNumber=1
 Dma.DFSDM1_FLT2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.DFSDM1_FLT2.2.SignalID=NONE
-Dma.DFSDM1_FLT2.2.SyncEnable=DISABLE
-Dma.DFSDM1_FLT2.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DFSDM1_FLT2.2.SyncEnable=ENABLE
+Dma.DFSDM1_FLT2.2.SyncPolarity=HAL_DMAMUX_SYNC_RISING
 Dma.DFSDM1_FLT2.2.SyncRequestNumber=1
 Dma.DFSDM1_FLT2.2.SyncSignalID=NONE
 Dma.DFSDM1_FLT3.3.Direction=DMA_PERIPH_TO_MEMORY
@@ -370,95 +374,99 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_FREERTOS_Init-FREERTOS_M7-false-HAL-false-CortexM7,5-MX_DFSDM1_Init-DFSDM1-false-HAL-true-CortexM7,6-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,7-MX_SPI2_Init-SPI2-false-HAL-true-CortexM7,8-MX_SPI1_Init-SPI1-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
-RCC.ADCFreq_Value=110000000
-RCC.AHB12Freq_Value=120000000
-RCC.AHB4Freq_Value=120000000
-RCC.APB1Freq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=120000000
+RCC.ADCFreq_Value=150000000
+RCC.AHB12Freq_Value=200000000
+RCC.AHB4Freq_Value=200000000
+RCC.APB1Freq_Value=100000000
+RCC.APB2Freq_Value=100000000
+RCC.APB3Freq_Value=100000000
+RCC.APB4Freq_Value=100000000
+RCC.AXIClockFreq_Value=200000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CPU2Freq_Value=120000000
-RCC.CPU2SystikFreq_Value=120000000
-RCC.CortexFreq_Value=240000000
-RCC.CpuClockFreq_Value=240000000
-RCC.D1CPREFreq_Value=240000000
-RCC.DFSDMACLkFreq_Value=110000000
-RCC.DFSDMFreq_Value=120000000
+RCC.CPU2Freq_Value=200000000
+RCC.CPU2SystikFreq_Value=200000000
+RCC.CortexFreq_Value=400000000
+RCC.CpuClockFreq_Value=400000000
+RCC.D1CPREFreq_Value=400000000
+RCC.D1PPRE=RCC_APB3_DIV2
+RCC.D2PPRE1=RCC_APB1_DIV2
+RCC.D2PPRE2=RCC_APB2_DIV2
+RCC.D3PPRE=RCC_APB4_DIV2
+RCC.DFSDMACLkFreq_Value=150000000
+RCC.DFSDMFreq_Value=100000000
 RCC.DIVM1=1
 RCC.DIVM2=2
-RCC.DIVM3=1
-RCC.DIVN1=120
-RCC.DIVN2=110
-RCC.DIVN3=18
-RCC.DIVP1=4
-RCC.DIVP1Freq_Value=240000000
+RCC.DIVM3=2
+RCC.DIVN1=100
+RCC.DIVN2=150
+RCC.DIVN3=120
+RCC.DIVP1Freq_Value=400000000
 RCC.DIVP2=4
-RCC.DIVP2Freq_Value=110000000
-RCC.DIVP3Freq_Value=75000000
-RCC.DIVQ1Freq_Value=480000000
-RCC.DIVQ2Freq_Value=220000000
-RCC.DIVQ3=3
-RCC.DIVQ3Freq_Value=50000000
-RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2Freq_Value=220000000
-RCC.DIVR3Freq_Value=75000000
-RCC.FDCANFreq_Value=480000000
-RCC.FMCFreq_Value=120000000
+RCC.DIVP2Freq_Value=150000000
+RCC.DIVP3=4
+RCC.DIVP3Freq_Value=120000000
+RCC.DIVQ1Freq_Value=400000000
+RCC.DIVQ2Freq_Value=300000000
+RCC.DIVQ3=5
+RCC.DIVQ3Freq_Value=96000000
+RCC.DIVR1Freq_Value=400000000
+RCC.DIVR2Freq_Value=300000000
+RCC.DIVR3Freq_Value=240000000
+RCC.FDCANFreq_Value=400000000
+RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=120000000
-RCC.HCLKFreq_Value=120000000
+RCC.HCLK3ClockFreq_Value=200000000
+RCC.HCLKFreq_Value=200000000
 RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=120000000
+RCC.HRTIMFreq_Value=200000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=120000000
-RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1CLockSelection,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=120000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=75000000
+RCC.I2C123Freq_Value=100000000
+RCC.I2C4Freq_Value=100000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1CLockSelection,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=100000000
+RCC.LPTIM2Freq_Value=100000000
+RCC.LPTIM345Freq_Value=100000000
+RCC.LPUART1Freq_Value=100000000
+RCC.LTDCFreq_Value=240000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=240000000
+RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
-RCC.PLL3FRACN=6144
+RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=120000000
+RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.SAI1CLockSelection=RCC_SAI1CLKSOURCE_PLL2
-RCC.SAI1Freq_Value=110000000
-RCC.SAI23Freq_Value=480000000
-RCC.SAI4AFreq_Value=480000000
-RCC.SAI4BFreq_Value=480000000
-RCC.SDMMCFreq_Value=480000000
-RCC.SPDIFRXFreq_Value=480000000
-RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
-RCC.SPI123Freq_Value=110000000
-RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
-RCC.SWPMI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=240000000
+RCC.SAI1Freq_Value=150000000
+RCC.SAI23Freq_Value=400000000
+RCC.SAI4AFreq_Value=400000000
+RCC.SAI4BFreq_Value=400000000
+RCC.SDMMCFreq_Value=400000000
+RCC.SPDIFRXFreq_Value=400000000
+RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
+RCC.SPI123Freq_Value=120000000
+RCC.SPI45Freq_Value=100000000
+RCC.SPI6Freq_Value=100000000
+RCC.SWPMI1Freq_Value=100000000
+RCC.SYSCLKFreq_VALUE=400000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SupplySource=PWR_DIRECT_SMPS_SUPPLY
-RCC.Tim1OutputFreq_Value=120000000
-RCC.Tim2OutputFreq_Value=120000000
+RCC.Tim1OutputFreq_Value=200000000
+RCC.Tim2OutputFreq_Value=200000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=120000000
+RCC.USART16Freq_Value=100000000
 RCC.USART234578CLockSelection=RCC_USART234578CLKSOURCE_PLL3
-RCC.USART234578Freq_Value=50000000
+RCC.USART234578Freq_Value=96000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
-RCC.USBFreq_Value=50000000
-RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=440000000
-RCC.VCO3OutputFreq_Value=150000000
+RCC.USBFreq_Value=96000000
+RCC.VCO1OutputFreq_Value=800000000
+RCC.VCO2OutputFreq_Value=600000000
+RCC.VCO3OutputFreq_Value=480000000
 RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=4000000
-RCC.VCOInput3Freq_Value=8000000
+RCC.VCOInput3Freq_Value=4000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,CKOUT
@@ -474,14 +482,14 @@ SH.S_DATAIN5DFSDM1.0=DFSDM1_DATIN5,PDM_SPI_input_from_ch5_and_internal_clock
 SH.S_DATAIN5DFSDM1.1=DFSDM1_DATIN5,PDM_SPI_Input_from_ch45_and_Internal_Clock
 SH.S_DATAIN5DFSDM1.ConfNb=2
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=27.5 MBits/s
+SPI1.CalculateBaudRate=30.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=27.5 MBits/s
+SPI2.CalculateBaudRate=30.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
